feat: link in json file

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lol",
-  "homepage": "http://ghumti.au",
+  "homepage": "http://ghumti.au/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
